<resources>
    <string name="app_name">Unilink</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="unilink_cap">UNILINK</string>
    <string name="welcome_to">WELCOME TO</string>

    <string name="bottom_per_month">per month</string>
    <string name="matching_score">matching score</string>

    <string name="house_image">house image</string>
    <string name="user_image">user image</string>
    <string name="post">Post</string>
    <string name="major">Major:</string>

    <string name="roommate">Roommates</string>
    <string name="facility">Facts and Features</string>
    <string name="location">Location</string>
    <string name="available_room">Available Rooms</string>
    <string name="description">Description</string>

    <string name="button_contact">Contact</string>
    <string name="button_favorite">Favorite</string>
    <string name="button_cancel">Cancel</string>
    <string name="default_value">No Data</string>
    <string name="parking">Parking</string>
    <string name="ac">AC set</string>
    <string name="pet">Pets</string>
    <string name="tv">TV</string>
    <string name="bus">Bus</string>
    <string name="laundry">Laundry</string>
    <string name="gym">Gym</string>
    <string name="Game">Video Game</string>


    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Not Disclose</item>
    </string-array>

    <string-array name="years">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>

    <string-array name="Sort">
        <item>Sort</item>
        <item>Price: low to high</item>
        <item>Price: high to low</item>
        <item>Term: short to long</item>
        <item>Term: long to short</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint">******</string>
    <string name="forget_password">Forget Password?</string>
    <string name="myname_unilink_com">myname@unilink.com</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="no_message">No messages. Start chatting at the bottom!</string>
    <string name="say_something">Say something…</string>
</resources>
