<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/house_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v4.view.ViewPager>

                <ImageButton
                    android:id="@+id/house_button_favourite"
                    android:layout_width="@dimen/small_icon_side"
                    android:layout_height="@dimen/small_icon_side"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/icon_empty_heart"
                    android:contentDescription="@string/button_favorite" />

                <ImageButton
                    android:id="@+id/house_button_share"
                    android:layout_width="@dimen/small_icon_side"
                    android:layout_height="@dimen/small_icon_side"
                    android:layout_alignEnd="@id/house_button_favourite"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="@dimen/xlarge_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/icon_share"
                    android:contentDescription="@string/button_share" />

                <ImageButton
                    android:id="@+id/house_button_back"
                    android:layout_width="@dimen/small_icon_side"
                    android:layout_height="@dimen/small_icon_side"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/icon_back_arrow"
                    android:contentDescription="@string/button_back"/>

            </RelativeLayout>

            <TextView
                style="@style/house_content"
                android:id="@+id/house_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:textSize="@dimen/m_font_size"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="3B2B · Town House" />

            <TextView
                style="@style/house_content"
                android:id="@+id/house_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/l_font_size"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Beautiful Town House in a Quiet Area Near UTC" />

            <RelativeLayout
                style="@style/house_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/large_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/house_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:textColor="@color/black"
                        android:textSize="@dimen/m_font_size"
                        android:fontFamily="@font/roboto_thin"
                        android:text="Costa Verde, San Diego" />

                    <TextView
                        android:id="@+id/house_poster"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:textColor="@color/black"
                        android:textSize="@dimen/m_font_size"
                        android:fontFamily="@font/roboto_thin"
                        android:text="posted by kevin" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/house_landlord_image"
                    android:layout_width="@dimen/large_icon_side"
                    android:layout_height="@dimen/large_icon_side"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/ic_account"
                    android:contentDescription="@string/user_image" />

            </RelativeLayout>

            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_room" />

            <ListView
                style="@style/house_content"
                android:id="@+id/house_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/house_description"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s_font_size"
                android:textColor="@color/black"
                android:text="this is the sample display UI for house post, not completed yet. lot of parts is under construction" />

            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roommate" />

            <ListView
                style="@style/house_content"
                android:id="@+id/roommate_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facility" />

            <LinearLayout
                style="@style/house_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/house_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/middle_icon_side"
                            android:layout_height="@dimen/middle_icon_side"
                            android:src="@drawable/icon_tv"
                            android:contentDescription="@string/tv"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|top"
                            android:textSize="@dimen/s_font_size"
                            android:fontFamily="@font/roboto_thin"
                            android:textColor="@color/black"
                            android:text="@string/tv"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/house_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/middle_icon_side"
                        android:layout_height="@dimen/middle_icon_side"
                        android:src="@drawable/icon_wifi"
                        android:contentDescription="@string/wifi"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|top"
                        android:textSize="@dimen/s_font_size"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/black"
                        android:text="@string/wifi"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/house_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/middle_icon_side"
                        android:layout_height="@dimen/middle_icon_side"
                        android:src="@drawable/icon_bus"
                        android:contentDescription="@string/bus"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|top"
                        android:textSize="@dimen/s_font_size"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/black"
                        android:text="@string/bus"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/house_gym"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/middle_icon_side"
                        android:layout_height="@dimen/middle_icon_side"
                        android:src="@drawable/icon_gym"
                        android:contentDescription="@string/gym"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|top"
                        android:textSize="@dimen/s_font_size"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/black"
                        android:text="@string/gym"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/house_game"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/middle_icon_side"
                        android:layout_height="@dimen/middle_icon_side"
                        android:src="@drawable/icon_game"
                        android:contentDescription="@string/game"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|top"
                        android:textSize="@dimen/s_font_size"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/black"
                        android:text="@string/game"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/house_ac"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/middle_icon_side"
                        android:layout_height="@dimen/middle_icon_side"
                        android:src="@drawable/icon_ac"
                        android:contentDescription="@string/AC"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|top"
                        android:textSize="@dimen/s_font_size"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/black"
                        android:text="@string/AC"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <ImageView
                style="@style/house_content"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@drawable/my_bg" />


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/shadow_bar"
        android:orientation="horizontal"
        android:alpha="0.92">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/large_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/house_bottom_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="$ 1000 "
                    android:textColor="@color/black"
                    android:textSize="@dimen/m_font_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/bottom_per_month"
                    android:textColor="@color/black"
                    android:textSize="@dimen/m_font_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/house_bottom_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="Annual Lease · Start in May"
                android:textColor="@color/black"
                android:textSize="@dimen/m_font_size" />

        </LinearLayout>

        <Button
            android:id="@+id/house_button_contact"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/round_button"
            android:text="@string/button_contact"
            android:textColor="@color/white"
            android:textSize="@dimen/m_font_size"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>