<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_weight="0"
        android:background="#6d48e5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/roommate_button_back"
            android:layout_width="@dimen/small_icon_side"
            android:layout_height="@dimen/small_icon_side"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_weight="0"
        android:background="@drawable/bottom_bar" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/large_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/house_bottom_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="$ 1000 "
                    android:textColor="@color/black"
                    android:textSize="@dimen/m_font_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/bottom_per_month"
                    android:textColor="@color/black"
                    android:textSize="@dimen/m_font_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/house_bottom_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="Annual Lease · Start in May"
                android:textColor="@color/black"
                android:textSize="@dimen/m_font_size" />

        </LinearLayout>

        <Button
            android:id="@+id/house_button_contact"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/round_button"
            android:text="@string/button_contact"
            android:textColor="@color/white"
            android:textSize="@dimen/m_font_size"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>