<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_weight="0"
        android:background="#6d48e5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Kevin Spencer"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/roommate_button_back"
            android:layout_width="@dimen/small_icon_side"
            android:layout_height="@dimen/small_icon_side"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/small_margin"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white" />

    </RelativeLayout>

    <ScrollView
        style="@style/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/small_margin">

                <ImageView
                    android:id="@+id/poster_picture"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/my_bg" />
                
                <LinearLayout
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_width="142dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/roommate_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Kevin Spencer"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/normal_text"
                        android:text="Gender:" />

                    <TextView
                        android:id="@+id/roommate_gender"
                        style="@style/normal_text" />

                    <TextView
                        android:id="@+id/school_year"
                        style="@style/normal_text"
                        android:layout_marginTop="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/graduate_year"
                        style="@style/normal_text" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/roommate_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="36dp"
                        android:textColor="#000000"
                        android:text="10"
                        android:textSize="20sp"
                        android:fontFamily="@font/roboto"
                        android:textStyle="bold"/>

                    <com.app.progresviews.ProgressWheel
                        android:id="@+id/roommate_progress"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        app:barWidth="6dp"
                        app:countText=""
                        app:countTextColor="#000000"
                        app:countTextSize="20sp"
                        app:defTextColor="#000000"
                        app:defTextSize="0sp"
                        app:definitionText=""
                        app:marginBtwText="0dp"
                        app:percentage="100"
                        app:progressColor="#6d48e5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/roommate_progress"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="96dp"
                        android:text="@string/matching_score"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-light" />
                </RelativeLayout>
            </LinearLayout>

            <com.teamxod.unilink.TagViewGroup
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                style="@style/subtitle_roommate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/roommate_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="this is the sample display UI for roommate post, not completed yet. lot of parts is under construction"
                android:textColor="@color/black"
                android:textSize="@dimen/s_font_size" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_weight="0"
        android:background="@drawable/bottom_bar" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/large_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/roommate_bottom_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|bottom"
                android:text="Kevin Spencer"
                android:textColor="@color/black"
                android:textSize="@dimen/m_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/roommate_bottom_year"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start|top"
                android:text="4th Year"
                android:textColor="@color/black"
                android:textSize="@dimen/m_font_size" />

        </LinearLayout>

        <Button
            android:id="@+id/house_button_contact"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/round_button"
            android:text="@string/button_contact"
            android:textColor="@color/white"
            android:textSize="@dimen/m_font_size"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>